# ccminer_stb

./: Makefile.am  README-ANDROID.md  api.cpp  bignum.cpp  bignum.hpp  build.sh  ccminer  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.sh  cuda_helper.h  cuda_x17_sha512.cu  miner.h  run  util.cpp
compat/: ccminer-config.h
equi/: equi-stratum.cpp
verus/: haraka.c  haraka.h  haraka_portable.c  haraka_portable.h  verus.cu  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.h  verusdouble.cu  verusold.cu  verusscan.cpp  verusscan.cu
x17/: x17.cu
